Migrate to GitHub-based storage with GitHub Pages deployment
- Replace Postgres/Drizzle with GitHub API (Octokit) for content storage
- Add GitHub Actions workflow for GitHub Pages deployment
- Convert to static export (output: 'export')
- Remove admin UI and API routes (not compatible with static export)
- Content now lives in content/notes/*.md with status in frontmatter
- Add sample blog post about using GitHub as a database

--- a/package.json
+++ b/package.json
@@ -11,21 +11,16 @@
     "test:watch": "vitest watch",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@aws-sdk/client-s3": "^3.948.0",
-    "@neondatabase/serverless": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.45.1",
     "gray-matter": "^4.0.3",
     "next": "16.0.8",
+    "octokit": "^5.0.5",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "remark": "^15.0.1",
@@ -43,7 +38,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.2",
-    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "jsdom": "^27.3.0",
