--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,25 @@
-# Database (Neon)
-DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+# GitHub (content storage)
+GITHUB_TOKEN=ghp_your_personal_access_token
+GITHUB_OWNER=your-username
+GITHUB_REPO=my-blogs
+GITHUB_BRANCH=main
 
 # Admin Authentication
 # Generate with: openssl rand -hex 32
 ADMIN_TOKEN=your-64-char-random-token-here
 
-# Cloudflare R2 Storage
+# Cloudflare R2 Storage (optional - for image uploads)
 R2_ACCOUNT_ID=your-cloudflare-account-id
 R2_ACCESS_KEY_ID=your-r2-access-key
 R2_SECRET_ACCESS_KEY=your-r2-secret-key
 R2_BUCKET_NAME=my-blogs-images
 R2_PUBLIC_URL=https://your-bucket.r2.dev
 
-# Anthropic (Claude)
+# Anthropic (optional - for AI features)
 ANTHROPIC_API_KEY=sk-ant-xxxxx
 
-# Google Gemini (for image generation)
+# Google Gemini (optional - for image generation)
 GEMINI_API_KEY=your-gemini-api-key
 
-# Vercel (for deploy hooks)
+# Vercel (optional - for auto-deploy on publish)
 VERCEL_DEPLOY_HOOK=https://api.vercel.com/v1/integrations/deploy/xxxxx
